# dsHns

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
code/: .gitignore  Cargo.toml
code/.dshns/: runtime.sqlite3
code/src/: lib.rs  main.rs
code/tests/: agent_runner_tests.rs  child_agent_manager_tests.rs  cli_application_tests.rs  config_loader_tests.rs  context_manager_tests.rs  database_migration_tests.rs  end_to_end_regression_tests.rs  event_bus_tests.rs  ipc_contract_tests.rs  prompt_assembler_tests.rs  runtime_metrics_tests.rs  tool_dispatcher_tests.rs  workspace_session_service_tests.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent_loop.rs  approval.rs  context.rs  lib.rs  safety.rs  subagent.rs
crates/agent/tests/: integration_test.rs
crates/app/: Cargo.toml
crates/app/src/: cli.rs  main.rs  repl.rs
crates/core/: Cargo.toml
crates/deepseek-client/: Cargo.toml
crates/deepseek-client/src/: client.rs  lib.rs  request.rs  response.rs
crates/session-store/: Cargo.toml
crates/tools/: Cargo.toml
docs/: TASK-001-003开发记录.md  TASK-001-004开发记录.md  TASK-001-007开发记录.md  TASK-001-010开发记录.md  TASK-001-014开发记录.md  TASK-001-017开发记录.md  TASK-001-022开发记录.md  TASK-001-026开发记录.md  TASK-001-029开发记录.md  TASK-027-029验收记录.md
src/: lib.rs  main.rs
src/agent/: context.rs  loop_runner.rs  manager.rs  mod.rs
src/app/: api.rs  cli.rs  harness.rs  mod.rs
src/approval/: manager.rs  mod.rs
src/config/: mod.rs  settings.rs
src/domain/: agent.rs  audit.rs  message.rs  mod.rs  session.rs  status.rs  tool.rs  working_memory.rs  workspace.rs
src/ipc/: bus.rs  events.rs  (+1 more)
tests/: agent_event_integration.rs  api_extended_integration.rs  api_lifecycle_integration.rs  automation_tools_integration.rs  exec_shell_integration.rs  file_tools_integration.rs  finance_integration.rs  git_tools_integration.rs  github_get_integration.rs  load_skill_integration.rs  mcp_integration.rs  memory_tools_integration.rs  plan_tools_integration.rs  request_user_input_integration.rs  task_shell_integration.rs  tool_result_fallback_integration.rs  tool_result_query_integration.rs  utility_tools_integration.rs  web_run_integration.rs
(+72 files in other folders)
