[package]
name = "dshns-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
dshns-core = { path = "../core" }
dshns-deepseek-client = { path = "../deepseek-client" }
dshns-tools = { path = "../tools" }
dshns-session-store = { path = "../session-store" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1"
serde = "1"
regex = "1"
uuid = "1"
futures = "0.3"
