[package]
name = "dshns"
version = "0.1.0"
edition = "2021"

[dependencies]
dshns-core = { path = "../core" }
dshns-deepseek-client = { path = "../deepseek-client" }
dshns-tools = { path = "../tools" }
dshns-session-store = { path = "../session-store" }
dshns-agent = { path = "../agent" }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
chrono = "0.4"
toml = "0.8"
