[package]
name = "dshns-deepseek-client"
version = "0.1.0"
edition = "2021"

[dependencies]
dshns-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
tokio-stream = "0.1"
futures = "0.3"
